--- a/app/src/main/res/layout/layout_review.xml
+++ b/app/src/main/res/layout/layout_review.xml
@@ -16,10 +16,16 @@
         android:textSize="30sp"/>
 
     <Button
-        android:text="选择字体"
+        android:text="选择特效"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_add" />
+
+    <Button
+        android:text="选择字体"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_font" />
 
     <FrameLayout
         android:id="@+id/fl_cotainer"
